[JBIDE-9367] moved launch command building to RSEJBoss7LaunchConfigurator, implemented building the launch command from scratch (was: used the launch settings built by the local launch config and transformed it)
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@33042 a97e2381-89e5-4abb-bab3-167db6db766c